Finished design of application template and index of invert

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,13 @@
   </head>
 
   <body>
-    <%= yield %>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <a class="navbar-brand" href="/">Youtube Inverter</a>
+    </nav>
+    <div class="container">
+      <div class="center-content">
+        <%= yield %>
+      </div>
+    </div>
   </body>
 </html>
