--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,16 @@
  */
  @import "bootstrap-sprockets";
  @import "bootstrap";
+
+ .center-content{
+   margin: 40px 15px;
+   padding: 25px 25px 25px 25px;
+   text-align: center;
+   background-color: #eceeef;
+   -moz-border-radius: 15px;
+   border-radius: 15px;
+ }
+
+body{
+  padding-top: 50px;
+}
