--- a/app/views/playlist_inverter/index.html.erb
+++ b/app/views/playlist_inverter/index.html.erb
@@ -1,2 +1,39 @@
-<h1>Inverter index</h1>
-<%= link_to "Authenticate first", @auth_link,  class: "btn, btn-default" %>
+<div class="row">
+  <h1>Want to invert a Youtube playlist?</h1>
+</div>
+<div class="row">
+  <div class="col-md-4">
+    <h2>Ever had a reverted playlist?</h2>
+    <p>
+      Ever found a new Youtuber and wanted to watch a series of his in chronogical order
+      only to find out that, whilst they created a playlist for that precise serie, the videos come with
+      the latest first.
+      We did, and we wanted a solution for this. Instead of asking each and every Youtuber we love,
+      robbing them of their precious time, we created this website.
+    </p>
+  </div>
+  <div class="col-md-4">
+    <h2>How does it work?</h2>
+    <p>
+      Ever found a new Youtuber and wanted to watch a series of his in chronogical order
+      only to find out that, whilst they created a playlist for that precise serie, the videos come with
+      the latest first.
+      We did, and we wanted a solution for this. Instead of asking each and every Youtuber we love,
+      robbing them of their precious time, we created this website.
+    </p>
+  </div>
+  <div class="col-md-4">
+    <h2>But you're gonna steal my info!</h2>
+    <p>
+      Ever found a new Youtuber and wanted to watch a series of his in chronogical order
+      only to find out that, whilst they created a playlist for that precise serie, the videos come with
+      the latest first.
+      We did, and we wanted a solution for this. Instead of asking each and every Youtuber we love,
+      robbing them of their precious time, we created this website.
+    </p>
+  </div>
+</div>
+<div class="row">
+  <h1>Ready to go?</h1>
+  <%= link_to "Authenticate with Youtube", @auth_link,  class: "btn btn-primary" %>
+</div>
