Finished frontend for all pages. Added link to playlist and recap of inverted playlist

--- a/app/views/playlist_inverter/index.html.erb
+++ b/app/views/playlist_inverter/index.html.erb
@@ -13,23 +13,22 @@
     </p>
   </div>
   <div class="col-md-4">
-    <h2>How does it work?</h2>
+    <h2>What can you do for me? How does it work?</h2>
     <p>
-      Ever found a new Youtuber and wanted to watch a series of his in chronogical order
-      only to find out that, whilst they created a playlist for that precise serie, the videos come with
-      the latest first.
-      We did, and we wanted a solution for this. Instead of asking each and every Youtuber we love,
-      robbing them of their precious time, we created this website.
+      It's fairly simple: we authenticate you on youtube, take your link to the playlist to invert, and
+      a new inverted playlist is created on your account. Once the playlist is created, we give you a link
+      to it and you're good to go!
     </p>
   </div>
   <div class="col-md-4">
-    <h2>But you're gonna steal my info!</h2>
+    <h2>Why do you need me to authenticate?</h2>
     <p>
-      Ever found a new Youtuber and wanted to watch a series of his in chronogical order
-      only to find out that, whilst they created a playlist for that precise serie, the videos come with
-      the latest first.
-      We did, and we wanted a solution for this. Instead of asking each and every Youtuber we love,
-      robbing them of their precious time, we created this website.
+      Well, we cannot create the playlist on the original channel! Because of how Youtube works, we
+      have to create the new playlist on somebody's account. As we cannot use a single account for every playlist,
+      we need to authenticate you with google's servers to create the playlist on your account.
+      Do not worry, we do not and cannot store any information used to authenticate you. We do not ask or need for your
+      account name nor for your password. We only get a temporary access to create a new playlist, and cannot retrieve
+      any other information such as your email address. We are committed to keep your information private.
     </p>
   </div>
 </div>
