--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,9 @@
 
     <div class="container">
       <div class="center-content">
+        <% if flash[:error] %>
+          <div class="alert alert-danger"><%= flash[:error] %></div>
+        <% end %>
         <%= yield %>
       </div>
     </div>
