Reverse fixed navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
         </a>
       </div>
     </div>
-    <nav class="navbar navbar-inverse">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
       <a class="navbar-brand" href="/">Youtube Inverter</a>
     </nav>
 
